--- a/templates/view2.html
+++ b/templates/view2.html
@@ -444,9 +444,9 @@ function checkConfigFile(){
       <!-- <h5>Save filename</h5>
       <p><input id ="config_filename_pl" placeholder=""></input></p>
       <p><input type="submit" value="Save rects" onclick="javascript:postRectangles()"></input></p> -->
-      <div id="preview">
+      <!-- <div id="preview">
         <img src="static/upload/align-tranf2.png">
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
